--- a/初等数学/hw/1/hw1.tex
+++ b/初等数学/hw/1/hw1.tex
@@ -134,7 +134,7 @@
   $$ \{a_1\} + \dots + \{a_n\} \ge \{a_1 + \dots + a_n\}  $$
   $$ \Rightarrow [a_1] + [a_2] + \dots + [a_n] \le [a_1 + \dots + a_n] $$ 
   We also know that $\{a_1\} + \dots + \{a_n\} < n$ since each element is less than 1.
-  And we know by definition that 
+  And we know by definition that, we can prove the second half of the equation
   $$ \{a_1 + \dots + a_n\} < 1$$ 
 \end{solution}
 
