--- a/初等数论/hw/hw4/hw4.tex
+++ b/初等数论/hw/hw4/hw4.tex
@@ -2,6 +2,7 @@
 \usepackage{CJKutf8}
 \usepackage{amsmath, amsthm, amssymb, bm, color, framed, graphicx, hyperref, mathrsfs}
 \usepackage{fancyhdr}
+\usepackage{multicol}
 \usepackage[left=20mm, right=20mm, top=20mm, bottom=20mm]{geometry}
 \pagestyle{fancy}
 \fancyhf{}
@@ -28,9 +29,11 @@
 
 \section{2.1}
 
-
+\setcounter{problemname}{2}
 \begin{problem}
-    设$m$位正整数，$(a,m)=1$. 我们用$a^{-1}$表示同余方程$ax\equiv1\pmod{m}$的任何一个整数解(即$a^{-1}\in\mathbb{Z}, aa^{-1}\equiv\pmod{m}$). 证明
+  解下列同余方程 \newline
+  $(1)$ $8x\equiv5\pmod{23}$ \newline
+  $(2)$ $2x\equiv7\pmod{37}$
 \end{problem}
 
 \begin{solution}
@@ -42,9 +45,11 @@
 \vspace{0.25\textheight}
 
 \begin{problem}
-    设正整数$n$的十进制表示为 
-    $$ n = a_0 + a_1 \cdot 10 + a_2 \cdot 10^2 + \cdots + a_k \cdot 10^k $$ 
-    证明
+   对每个整数$n$证明：\newline
+   $(1)$ $n^2\not\equiv2\pmod{3}$ \newline
+   $(2)$ $n^2\equiv0, 1\pmod{4}$ \newline
+   $(3)$ $n^3\equiv0, 1, -1\pmod{9}$ \newline
+   $(4)$ $n^4\equiv0,1\pmod{16}$ 
 \end{problem}
 
 \begin{solution} 
@@ -56,10 +61,8 @@
 
 \newpage
 
-
-\setcounter{problemname}{5}
 \begin{problem}
-   (1) 证明：当$n\geq3$时，$\phi(n)$为偶数
+   设$a$为奇数，$n\geq1$,证明$a^{2^n}\equiv1\pmod{2^{n+2}}$
 \end{problem}
 
 \begin{solution}
@@ -70,9 +73,13 @@
 \vspace{0.25\textheight}
 
 
-
+\section{2.4}
+\setcounter{problemname}{0}
 \begin{problem}
-    设$m$和$n$是正整数，$n=nt(t\in\mathbb{Z})$. 证明：模$n$的每个同余类都是模$m$的$t$个同余类之并。
+  解下列同余方程 \newline
+   $(1)$ $32x\equiv12\pmod{8}$ \newline
+   $(2)$ $28x\equiv124\pmod{116}$ \newline
+   $(3)$ $5x\equiv44\pmod{8}$
 \end{problem}
 
 \begin{solution}
@@ -84,10 +91,25 @@
 \newpage
 
 
-\setcounter{problemname}{9}
 \begin{problem}
-  设$a,m\in\mathbb{Z}, m \geq 2, (a,m) = 1$, 计算 
-  $$ \sum^{m-1}_{x=0}{[\frac{ax}{m}]}$$
+  解下列同余方程组
+  \begin{align*}
+    (1) &\left\{
+    \begin{aligned}
+      x\equiv1\pmod{3},\\
+      x\equiv1\pmod{5},\\
+      x\equiv1\pmod{7}
+    \end{aligned}\right.
+    &
+    (2) \left\{\begin{aligned}
+      x\equiv2\pmod{4},\\
+      x\equiv3\pmod{5},\\
+      x\equiv7\pmod{9}
+    \end{aligned}\right. 
+    % \\
+    % &\text{, pentru legea I, și}
+    % &\text{pentru legea a II-a}
+    \end{align*}
 \end{problem}
 
 \begin{solution}
@@ -109,12 +131,8 @@
 % \newpage
 
 
-
-\section{2.2}
-
-\setcounter{problemname}{0}
 \begin{problem}
-  设$a$是环$\mathbb{Z}_m$中非零元素，如果存在$\mathbb{Z}_m$中非零元素$\beta(\neq 0')$, 使得 $\alpha\beta=0'$, 称$a$零因子，证明
+ 用中国剩余定理解同余方程$37x\equiv31\pmod{77}$
 \end{problem}
 
 \begin{solution}
@@ -124,9 +142,8 @@
 \vfill
 \vspace{0.25\textheight}
 
-\begin{problem} \newline
-  $(1)$ 对与环$\mathbb{Z}_m$中任何元素$\alpha, m$个$\alpha$相加为$0'$ \newline
-  $(2)$ 设$p$为素数，对于域$\mathbb{Z_p}$中非零元素$\alpha$和正整数$n$，证明：$n$个$\alpha$相加为$0'$当且仅当$p \mid n$
+\begin{problem} 
+  求$2^{400}$被319除的余数
 \end{problem}
 
 \begin{solution}
@@ -138,7 +155,20 @@
 \newpage
 
 \begin{problem}
-  证明当$p$为奇素数时
+  设$m_1,m_2$是正整数$b_1,b_2\in\mathbb{Z}$. 证明：同余方程组
+  \begin{align*}
+    (1) &\left\{
+    \begin{aligned}
+      x\equiv1\pmod{3},\\
+      x\equiv1\pmod{5},\\
+      x\equiv1\pmod{7}
+    \end{aligned}\right.
+    &&&&&&&&&&&&&&&&&&&&&&&&&
+    % \\
+    % &\text{, pentru legea I, și}
+    % &\text{pentru legea a II-a}
+    \end{align*} \newline
+    有整数解的充分必要条件是$(m_1,m_2)\mid b_1 - b_2$，并且在次条件成立时，解为模$[m_1,m_2]$的同余类。
 \end{problem}
 
 \begin{solution}
@@ -148,25 +178,7 @@
 \vfill
 \vspace{0.25\textheight}
 
-\begin{problem}
-  对于整数$m\geq2$证明：$(m-1)!\equiv-1\pmod(m)$当且仅当$m$时素数
-\end{problem}
 
-\begin{solution}
-  
-\end{solution}
-
-\vfill
-\vspace{0.25\textheight}
-\newpage
-
-\begin{problem}
-  证明，若$Z_m^\star={a_1,\dots,a_\phi(m)}$,则$Z_m^\star={a_{1}^{-1},\dots,a_{\phi(m)}^{-1}}$.如何将它转述成同于的语言？
-\end{problem}
-
-\begin{solution}
-  
-\end{solution}
 
 
 \end{CJK}
